[package]
name = "transaction_manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "transaction_manager"
path = "src/lib.rs"

[[bin]]
name = "transaction_manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
